# xlent-scanner

./: .gitignore  README.md  create_release.ps1  push_to_git.ps1  pyproject.toml  test_webview.py
docs/: power-apps-api.md  power-apps-openapi.json
installasjonsguide/: INSTALLASJONSGUIDE.md
scripts/: build_linux.sh  build_mac.sh  build_win.ps1  install_mac_quick_action.sh  install_mac_service.sh  install_macos.sh  install_windows.ps1  package_linux.sh  package_mac.sh  package_win.ps1  release_gate.py  release_preflight.py  smoke_runtime.py
skills/: reduced_xlent_skills.md  skills.md  xlent-compliance-guard.skill
streamlit_app/: app.py  pyproject.toml  start.ps1
streamlit_app/lib/: about_page.py  background_page.py  branding.py  category_labels.py  deep_scan_ui.py  exports.py  findings_table.py  folder_jobs.py  folder_scan.py  folder_ui.py  redaction_ui.py  risk_badge.py  scan_runner.py  scan_ui.py  settings_page.py
tests/: test_anonymize.py  test_app_structure.py  test_blacklist.py  test_build_linux_config.py  test_build_mac_config.py  test_build_win_config.py  test_clients.py  test_deep_scanner_ollama_stop.py  test_detectors.py  test_diagnostics_and_preview.py  test_empty_document_warning.py  test_false_positive_reductions.py  test_fixture_scan.py  test_folder_scan.py  test_guard_watch_custom_ocr.py  test_gui_layout_css.py  test_image_pdf_redaction.py  test_install_macos_config.py  test_install_windows_config.py  test_jobs.py  test_language.py  test_microsoft_graph.py  test_model_manager.py  test_patch_docx.py  test_patch_pdf.py  test_performance_paths.py  (+17 more)
(+69 files in other folders)
