[project]
name = "xlent-scanner"
version = "1.3.11"
description = "Lokal scanner som sjekker dokumenter for sensitiv kundeinfo før opplasting til online AI-verktøy"
readme = "README.md"
authors = [
    { name = "Thomas Elboth", email = "t.elboth@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docling>=2.0.0",
    "flask>=3.1.3",
    "jinja2>=3.1.0",
    "langdetect>=1.0.9",
    "openpyxl>=3.1.0",
    "pymupdf>=1.26.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pywebview>=5.3.0",
    "spacy>=3.8.14",
]

[project.scripts]
xlent-scanner = "xlent_scanner.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

